// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NameValuePair should render name when name is JSX Element 1`] = `
.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c2"
      >
        <div
          class="c3"
        >
          name
        </div>
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c2"
      >
        <div
          class="c3"
        >
          location
        </div>
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c2"
      >
        <div
          class="c3"
        >
          health
        </div>
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValuePair should render name when name is typeof string 1`] = `
.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValuePair should render value when provided as child of type \\n  string or number 1`] = `
.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 96px) );
  grid-gap: 24px 48px;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValuePair should render value when provided as child of type JSX Element 1`] = `
.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  max-width: 100%;
  overflow: hidden;
}

.c4 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  margin: 0px;
  grid-template-columns: repeat( auto-fit,minmax(auto, 384px) );
  grid-gap: 24px 48px;
}

@media only screen and (max-width: 768px) {
  .c3 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        name
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        location
      </dt>
      <dd
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); margin: 0px;"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="textRecipe_size_medium"
        style="color: rgb(68, 68, 68); font-weight: bold; margin-bottom: 3px;"
      >
        health
      </dt>
      <dd
        class="c3"
      >
        <svg
          aria-label="Bar meter with value 80 out of 100"
          class="c4"
          height="24"
          preserveAspectRatio="none"
          viewBox="0 0 384 24"
          width="384"
        >
          <path
            d="M 0,12 L 384,12"
            fill="none"
            stroke="#F2F2F2"
            stroke-linecap="square"
            stroke-opacity="0.4"
            stroke-width="24"
          />
          <path
            d="M 0,24 L 0,0 L 307.2,0 L 307.2,24 Z"
            fill="#6FFFB0"
            stroke="none"
            stroke-width="0"
          />
        </svg>
      </dd>
    </div>
  </dl>
</div>
`;
